--- a/index.html
+++ b/index.html
@@ -1,142 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Global 3 Concept Ltd</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #0d0d0d;
-            color: white;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Global 3 Concept Ltd</title>
 
-        header {
-            padding: 20px 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: #111;
-            position: sticky;
-            top: 0;
-        }
+<style>
+body{
+    margin:0;
+    font-family: Arial, Helvetica, sans-serif;
+    background:#0d0d0d;
+    color:white;
+}
 
-        header h1 {
-            font-size: 22px;
-        }
+header{
+    background:#111;
+    padding:20px 40px;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+}
 
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin-left: 20px;
-            font-size: 14px;
-        }
+nav a{
+    color:white;
+    margin-left:20px;
+    text-decoration:none;
+    font-size:14px;
+}
 
-        .hero {
-            height: 90vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            padding: 20px;
-            background: linear-gradient(to right, #000000, #1a1a1a);
-        }
+.hero{
+    text-align:center;
+    padding:100px 20px;
+    background:linear-gradient(to right,#000,#1a1a1a);
+}
 
-        .hero h2 {
-            font-size: 42px;
-            margin-bottom: 20px;
-        }
+.hero h1{
+    font-size:42px;
+}
 
-        .hero p {
-            font-size: 18px;
-            max-width: 700px;
-            margin: auto;
-        }
+.btn{
+    display:inline-block;
+    margin-top:30px;
+    padding:15px 30px;
+    background:#00c896;
+    color:black;
+    text-decoration:none;
+    border-radius:5px;
+    font-weight:bold;
+}
 
-        .btn {
-            margin-top: 30px;
-            padding: 15px 30px;
-            background: #00c896;
-            color: black;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 5px;
-        }
+.section{
+    padding:60px 30px;
+    text-align:center;
+}
 
-        .section {
-            padding: 60px 40px;
-            text-align: center;
-        }
+.reviews{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+    gap:20px;
+    margin-top:40px;
+}
 
-        .services {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin-top: 40px;
-        }
+.card{
+    background:#1a1a1a;
+    padding:20px;
+    border-radius:10px;
+}
 
-        .card {
-            background: #1a1a1a;
-            padding: 20px;
-            border-radius: 10px;
-        }
+footer{
+    text-align:center;
+    padding:20px;
+    background:#111;
+    margin-top:40px;
+}
 
-        .whatsapp {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background: #25D366;
-            color: white;
-            padding: 15px;
-            border-radius: 50%;
-            text-decoration: none;
-            font-size: 22px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #111;
-            font-size: 14px;
-        }
-    </style>
+.whatsapp{
+    position:fixed;
+    bottom:20px;
+    right:20px;
+    background:#25D366;
+    color:white;
+    padding:15px;
+    border-radius:50%;
+    text-decoration:none;
+    font-size:22px;
+}
+</style>
 </head>
+
 <body>
 
 <header>
-    <h1>Global 3 Concept Ltd</h1>
+    <h2>Global 3 Concept Ltd</h2>
     <nav>
-        <a href="#">Home</a>
-        <a href="Services.html">services</a>
-        <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="request.html">Get Started</a>
     </nav>
 </header>
 
 <section class="hero">
-    <div>
-        <h2>We Build Businesses & Provide Quality Services for Growth</h2>
-        <p>Your trusted partner for business coaching, CAC registration, branding, government processing, and digital marketing.</p>
-        <a class="btn" href="https://wa.me/2349023125118">Chat on WhatsApp</a>
-    </div>
+    <h1>We Build Businesses & Provide Quality Services for Growth</h1>
+    <p>Your trusted partner for business compliance, branding, and digital growth.</p>
+    <a class="btn" href="request.html">Start Your Request</a>
 </section>
 
 <section class="section">
-    <h2>Our Core Services</h2>
-    <div class="services">
-        <div class="card">Business Coaching & Consultancy</div>
-        <div class="card">CAC, SCUML, TIN, Trademark & Export Licence</div>
-        <div class="card">Branding & Graphics Design</div>
-        <div class="card">Facebook, Google, TikTok & Social Ads</div>
-        <div class="card">Social Media Strategy & Management</div>
-        <div class="card">NIN & Passport Processing</div>
+    <h2>What Our Clients Say</h2>
+
+    <div class="reviews">
+        <div class="card">
+            “Very fast CAC registration and professional service.”<br><br>
+            — Business Owner
+        </div>
+
+        <div class="card">
+            “They handled my TIN and SCUML without stress.”<br><br>
+            — Entrepreneur
+        </div>
+
+        <div class="card">
+            “Excellent branding and advert results for my business.”<br><br>
+            — Brand Client
+        </div>
     </div>
 </section>
 
 <a class="whatsapp" href="https://wa.me/2349023125118">💬</a>
 
 <footer>
-    © 2026 Global 3 Concept Ltd. All rights reserved.
+© 2026 Global 3 Concept Ltd. All rights reserved.
 </footer>
 
 </body>
